--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spany/atlas.js",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A module that has multiple functions and will make your work easier.",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,8 @@
     "color",
     "discord",
     "javascript",
-    ""
+    "deprem",
+    "earthquake"
   ],
   "engines": {
     "node": ">=14.0.0"
